src/components/widgetSmall/widgetSmall.module.scss
@use "src/styles";

.WidgetSmall {
  flex: 1;
  border-radius: 10px;
  -webkit-box-shadow: styles.$shadow;
  -moz-box-shadow: styles.$shadow;
  box-shadow: styles.$shadow;
  margin-right: 20px;
  height: 50vh;
  overflow: hidden;

  @media only screen and (max-width: 1000px) {
    margin-right: 0;
    margin-bottom: 20px;
  }

  @media only screen and (max-width: 500px) {
    width: 85vw;
  }
}

.Wrapper {
  height: 50vh;
  overflow: auto;
}

.Title {
  font-size: 22px;
  font-weight: 600;
  position: sticky;
  top: 0;
  background-color: #fff;
  padding: 15px 20px;
}

.List {
  list-style: none;
  margin: 0;
  padding: 0 20px;
}

.ListItem {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: 20px 0;

  img {
    height: 40px;
    width: 40px;
    object-fit: cover;
    border-radius: 50%;
  }

  button {
    display: flex;
    align-items: center;
    border: none;
    border-radius: 10px;
    padding: 7px 10px;
    background-color: #eeeef7;
    color: #555;
    cursor: pointer;
  }
}

.UserContainer {
  display: flex;
  align-items: center;
}

.User {
  display: flex;
  flex-direction: column;
  width: 45%;
  margin: 0 10px;
}

.UserName {
  font-weight: 600;

  @media only screen and (max-width: 1000px) and (min-width: 380px) {
    white-space: nowrap;
  }
}

.UserTitle {
  font-weight: 300;
}

.Icon {
  font-size: 20px !important;
  margin-right: 0;

  @media only screen and (max-width: 1000px) {
    margin-right: 5px;
  }
}

.DisplayText {
  display: none;

  @media only screen and (max-width: 1000px) and (min-width: 380px) {
    display: block;
  }
}

